# godotty

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  devenv.nix
.github/workflows/: release.yml
addons/godotty/: FONTS.md  godotty.gdextension
src/: font.rs  input.rs  lib.rs  plugin.rs  pty.rs  run.rs  sprite.rs  sync.rs  terminal.rs  theme.rs
src/pty/: unix.rs  windows.rs
